# readme-i18n

./: .pre-commit-config.yaml  .pre-commit-hook.yaml  LICENSE  README.de.md  README.md  flags.json  pyproject.toml  readme_i18n-hook.sh
readme_i18n/: hook.py
translations/: README.DE.md  README.ZH.md
