[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-i18n"
version = "0.1.0"
description = "A pre-commit hook to check and update README translations."
authors = [{ name = "Marius Bendixen", email = "screaming.idiots@outlook.de" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
readme-i18n-hook = "readme_i18n.hook:main"

# Configure readme-i18n for your needs
[tool.readme-i18n]
# ISO-Codes for translations 
# Find the ISO-Codes here: https://developers.deepl.com/docs/getting-started/supported-languages#translation-source-languages
languages = ["DE", "ZH"]
# Folder that will contain all translation files
output_dir = "translations"
# Filename template used inside output_dir
# {basename} = original filename without extension
# {lang}     = language code
# {ext}      = original file extension (including dot)
template = "{basename}.{lang}{ext}"
# The following markers are used to identify the start and end of the translation header block in the README file.
marker_start = "<!-- readme-i18n start -->"
marker_end = "<!-- readme-i18n end -->"
